Parameterized dockerize timeouts